--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.19"
   },
   "name": "desafioclase6_2",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
